--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "image2uri": "^2.1.2",
+    "node-base64-image": "^2.0.7",
     "vue": "^3.2.45"
   },
   "devDependencies": {
